--- a/apps/studio/styles/grid.scss
+++ b/apps/studio/styles/grid.scss
@@ -38,7 +38,7 @@
 
 .rdg {
   @apply box-border select-none overflow-x-auto overflow-y-scroll bg-transparent;
-  @apply border-default border-t border-b border-r-0 border-l-0;
+  @apply border-default border-t border-r-0 border-l-0;
   contain: strict;
   -webkit-user-select: none;
   font-size: 14px;
